Added: unit tests